@@ -1,3 +1,9 @@
+2010-01-06  Michael Poole <mdpoole@troilus.org>
+
+	* ircd/m_silence.c (m_silence): Only show the silence list for the
+	requesting client and for channel services, to help keep other
+	clients' servers hidden.
+
 2010-01-03  Michael Poole <mdpoole@troilus.org>
 
         * ircd/engine_devpoll.c: Make some variables that were local to
